Work on swagger, small fixes
