# docs/swagger.json
@@ -30,6 +30,12 @@
                         "schema": {
                             "$ref": "#/definitions/controllers.GetResponse"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
                     }
                 }
             }
@@ -58,6 +64,9 @@
                         "schema": {
                             "$ref": "#/definitions/controllers.MakeResponse"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request"
                     }
                 }
             }
@@ -76,17 +85,20 @@
         "controllers.MakeRequest": {
             "type": "object",
             "required": [
-                "link"
+                "original",
+                "short"
             ],
             "properties": {
-                "link": {
+                "original": {
                     "type": "string",
                     "maxLength": 1000,
-                    "minLength": 2,
-                    "example": "http://example.com/da3rsf"
+                    "minLength": 1,
+                    "example": "http://example.com/"
                 },
                 "short": {
                     "type": "string",
+                    "maxLength": 100,
+                    "minLength": 6,
                     "example": "da3rsf"
                 }
             }
@@ -96,7 +108,7 @@
             "properties": {
                 "short": {
                     "type": "string",
-                    "example": "http://example.com/da3rsf"
+                    "example": "da3rsf"
                 }
             }
         }
